--- a/3月25日.md
+++ b/3月25日.md
@@ -4,7 +4,7 @@
 
 	**全国封城：**意大利、西班牙、捷克、法国、比利时、约旦、阿根廷、德国巴伐利亚州、斯里兰卡、新西兰、印度、玻利维亚、希腊、尼泊尔、南非、英国、阿尔及利亚（部分省）
 
-	**宣布紧急状态：**格鲁吉亚、多米尼加、葡萄牙、澳大利亚、萨尔瓦多、洪都拉斯、卢森堡、津巴布韦、哥伦比亚、约旦、纳米比亚、斯威士兰、苏丹、亚美尼亚、厄瓜多尔、芬兰、法国、摩尔多瓦、瑞士、哥斯达黎加、波黑、奥地利、塞浦路斯、黎巴嫩、塞尔维亚、南非、秘鲁、哈萨克斯坦、罗马尼亚、利比亚、西班牙、保加利亚、爱沙尼亚、波兰、巴拿马、美国、委内瑞拉、斯洛伐克、拉脱维亚、阿根廷、捷克、匈牙利、菲律宾、巴勒斯坦、危地马拉、韩国、立陶宛、意大利、巴布亚新几内亚、吉尔吉斯斯坦、摩洛哥、萨摩亚、汤加、塞内加尔、泰国、新西兰
+	**宣布紧急状态：**格鲁吉亚、多米尼加、葡萄牙、澳大利亚、萨尔瓦多、洪都拉斯、卢森堡、津巴布韦、哥伦比亚、约旦、纳米比亚、斯威士兰、苏丹、亚美尼亚、厄瓜多尔、芬兰、法国、摩尔多瓦、瑞士、哥斯达黎加、波黑、奥地利、塞浦路斯、黎巴嫩、塞尔维亚、南非、秘鲁、哈萨克斯坦、罗马尼亚、利比亚、西班牙、保加利亚、爱沙尼亚、波兰、巴拿马、美国、委内瑞拉、斯洛伐克、拉脱维亚、阿根廷、捷克、匈牙利、菲律宾、巴勒斯坦、危地马拉、韩国、立陶宛、意大利、巴布亚新几内亚、吉尔吉斯斯坦、摩洛哥、萨摩亚、汤加、塞内加尔、泰国、新西兰、刚果（金）
 
 	**停飞航班：**俄罗斯、阿联酋、土耳其、新加坡、香港、菲律宾、南非、泰国
 
@@ -35,7 +35,7 @@ IATA国际航空运输协会：
 
  
 
-# **二）欧洲**
+# **（二）欧洲**
 1. 欧盟
 1. 意大利
 
@@ -91,11 +91,14 @@ IATA国际航空运输协会：
 
 芬兰宣布了对餐馆的营业限制，餐馆将不对顾客开放，但允许外卖。
 
+俄印发俄语版中国新冠肺炎防治手册，莫斯科“火神山”在建
+
 # （三）亚洲
 1. 韩国
 
 韩国总统文在寅24日宣布，将投入100万亿韩元扶持企业应对疫情。
 
+25日，韩国中央灾难安全对策本部在记者会上宣布，从当地时间27日0时起，将要求自美国入境者全员进行14日居家或指定场所隔离。
 
 1. **日本**
 
@@ -118,6 +121,8 @@ IATA国际航空运输协会：
 
 印度政府将从25日起实施为期21天的全国封锁，以遏制新冠肺炎疫情蔓延：印度全国封锁21天
 
+越南各地公安机关认真落实新冠肺炎疫情防控措施，挨家挨户上门清查，详细核查外来人员、入境人员行踪轨迹和身体状况
+
 # **（四）美洲**
 1. **美国**
 
@@ -138,6 +143,10 @@ IATA国际航空运输协会：
 美国至少已有16个州发布了“居家令
 
 美国纽约州将进行血浆疗法试验，利用新冠肺炎康复者的血浆来治疗其他确诊患者。纽约州是美国首个进行此类试验的州。
+
+美国首都华盛顿暂停非必要营运
+
+特朗普宣布艾奥瓦州为新冠疫情重大灾区
 
 2. **其他**
 
